# adaptive-wallpapers

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GALLERY.md  LICENSE  README.en.md  README.md  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
app/: README.md  pyproject.toml  run.py
app/adaptive_wallpaper/: __init__.py  __main__.py  about_dialog.py  app.py  config.py  engine.py  i18n.py  icon.py  installer.py  lockscreen.py  log.py  paths.py  settings_dialog.py  single_instance.py  style.py  updater.py  wallpaper.py
docs/: app.md  build.md  windows.md
notebook/: _generate_wallpapers_test.ipynb
plasma-plugin/: install.sh
plasma-plugin/org.dz.adaptivecoffee/: metadata.json
plasma-plugin/org.dz.adaptivecoffee/contents/config/: main.xml
plasma-plugin/org.dz.adaptivecoffee/contents/ui/: config.qml  logic.js  main.qml
scripts/: _gemini.py  generate.py  make_reference.py  make_video.py  regen.py  scenes.py  set_wallpaper.py
windows/: installer.iss
