[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-wallpaper"
version = "1.3.2"
description = "Cross-platform desktop app that sets the wallpaper by season, time of day and weather"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "dz-vadim" }]
dependencies = ["PyQt6>=6.5"]
keywords = ["wallpaper", "desktop", "tray", "weather", "kde", "gnome", "pyqt6"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/dz-vadim/adaptive-wallpapers"
Source = "https://github.com/dz-vadim/adaptive-wallpapers"
Issues = "https://github.com/dz-vadim/adaptive-wallpapers/issues"
Releases = "https://github.com/dz-vadim/adaptive-wallpapers/releases"

[project.gui-scripts]
adaptive-wallpaper = "adaptive_wallpaper.__main__:main"

[project.scripts]
adaptive-wallpaper-cli = "adaptive_wallpaper.__main__:main"

[tool.setuptools]
packages = ["adaptive_wallpaper"]

[tool.setuptools.package-data]
adaptive_wallpaper = ["assets/*"]
